--- a/components/E2Access/E2Access.module.css
+++ b/components/E2Access/E2Access.module.css
@@ -8,175 +8,179 @@
   width: 100%;
 }
   
-  .rootSectionText {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 16px;
-    display: block;
-  }
+.rootSectionText {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 16px;
+  display: block;
+}
   
-  .rootMainGroup {
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-  }
+.rootMainGroup {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+}
   
-  .rootSectionGroup {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    background-color: #ffffff;
-    padding: 16px;
-    border-radius: 20px;
-    max-height: 55vh;
-    overflow-y: auto;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-    transition: box-shadow 0.3s ease;
+.rootSectionGroup {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #ffffff;
+  padding: 16px;
+  border-radius: 20px;
+  max-height: 55vh;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s ease;
+  transform: translateY(20px);
+  animation: fadeInUp 0.5s ease-out forwards;
     transform: translateY(20px);
+  opacity: 0;
     animation: fadeInUp 0.5s ease-out forwards;
-    transform: translateY(20px);
+}
+  
+@keyframes fadeInUp {
+  from {
     opacity: 0;
-    animation: fadeInUp 0.5s ease-out forwards;
+    transform: translateY(20px);
   }
-  
-  @keyframes fadeInUp {
-    from {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
+}
 
+.rootPaginationGroupRequisition {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.rootTableGroup {
+  display: flex;
+  flex: 2;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 30vh;
+  width: 100%;
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.templateTextId:hover{
+  color: #3c96aa;
+  cursor: pointer;
+}
+  
+.odorTextId:hover {
+  color: #3c96aa;
+  cursor: pointer;
+}
+  
+@media (max-width: 1024px) {
   .rootTableGroup {
-    display: flex;
-    flex: 2;
-    justify-content: space-between;
-    align-items: flex-start;
-    height: 30vh;
-    width: 100%;
-    overflow-y: scroll;
-    scrollbar-width: none;
+    flex-direction: column;
+    justify-content: flex-start;
   }
-
-  .templateTextId:hover{
-    color: #3c96aa;
-    cursor: pointer;
-  }
+}
   
-  .odorTextId:hover {
-    color: #3c96aa;
-    cursor: pointer;
-  }
+.rootRequisitionTable {
+  width: 100%;
+  min-width: 800px;
+  margin-bottom: 20px;
+}
   
-  @media (max-width: 1024px) {
-    .rootTableGroup {
-      flex-direction: column;
-      justify-content: flex-start;
-    }
-  }
+.rootRequisitionThead {
+  color: white;
+  background: linear-gradient(135deg, #2c3e50, #4a6572);
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
   
-  .rootRequisitionTable {
-    width: 100%;
-    overflow-y: scroll;
-    min-width: 800px;
-    margin-bottom: 20px;
-    max-height: 35vh;
-  }
+.rootRequisitionTd {
+  overflow-x: scroll;
+  scrollbar-width: none;
+  white-space: nowrap;
+}
   
-  .rootRequisitionThead {
-    color: white;
-    background: linear-gradient(135deg, #2c3e50, #4a6572);
-    position: sticky;
-    top: 0;
-    z-index: 1;
-  }
+.rootTextId {
+  cursor: pointer;
+}
   
-  .rootRequisitionTd {
-    overflow-x: scroll;
-    scrollbar-width: none;
-    white-space: nowrap;
-  }
+.rootTextId:hover {
+  color: #3c96aa;
+}
   
-  .rootTextId {
-    cursor: pointer;
-  }
+.rootPoId {
+  cursor: pointer;
+}
   
-  .rootTextId:hover {
-    color: #3c96aa;
-  }
+.rootPoId:hover {
+  color: #3c96aa;
+}
   
-  .rootPoId {
-    cursor: pointer;
-  }
+.rootPoTable {
+  height: 30vh;
+  width: 100%;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  gap: 40px;
+}
   
-  .rootPoId:hover {
-    color: #3c96aa;
-  }
+.loadingContainer {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  height: 65vh;
+  width: 80vw;
+}
   
-  .rootPoTable {
-    height: 30vh;
-    width: 100%;
-    overflow-y: scroll;
-    scrollbar-width: none;
-    gap: 40px;
-  }
+.approveButton {
+  background-color: #54D0ED;
+  color: white;
+  border: none;
+  padding: 2px 18px;
+  text-align: center;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+}
   
-  .loadingContainer {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-    height: 65vh;
-    width: 80vw;
-  }
+.approveButton:hover {
+  background-color: #3c96aa;
+}
   
-  .approveButton {
-    background-color: #54D0ED;
-    color: white;
-    border: none;
-    padding: 2px 18px;
-    text-align: center;
-    display: inline-block;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
+.rejectButton {
+  background-color: #6D6875;
+  color: white;
+  border: none;
+  padding: 2px 18px;
+  text-align: center;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+}
   
-  .approveButton:hover {
-    background-color: #3c96aa;
-  }
+.rejectButton:hover {
+  background-color: #5e5a65;
+}
   
-  .rejectButton {
-    background-color: #6D6875;
-    color: white;
-    border: none;
-    padding: 2px 18px;
-    text-align: center;
-    display: inline-block;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
+.closeTicketButton {
+  background-color: #FFA62B;
+  color: white;
+  border: none;
+  padding: 2px 18px;
+  text-align: center;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+}
   
-  .rejectButton:hover {
-    background-color: #5e5a65;
-  }
-  
-  .closeTicketButton {
-    background-color: #FFA62B;
-    color: white;
-    border: none;
-    padding: 2px 18px;
-    text-align: center;
-    display: inline-block;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  
-  .closeTicketButton:hover {
-    background-color: #e89726;
-  }
+.closeTicketButton:hover {
+  background-color: #e89726;
+}
