--- a/components/DashboardTitle/DashboardTitle.module.css
+++ b/components/DashboardTitle/DashboardTitle.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between; 
   align-items: center;
-  width: 96%;
+  width: 100%;
   padding: 20px 40px;
   background: #f8f9fa;  
   border-radius: 12px;
@@ -68,7 +68,11 @@
   }
 }
 
-.endbar{
+.endofbar{
   display: flex;
   align-items:center
+}
+
+.bellspace {
+ margin-left: 10px;
 }
